Bug 121409 - Calc Styles dialog Background tab page does not show color or bitmap pages using selection buttons
Summary: Calc Styles dialog Background tab page does not show color or bitmap pages us...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-14 09:21 UTC by Jim Raykowski
Modified: 2018-11-18 15:39 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-11-14 09:21:01 UTC
Hi All,

Time for me to throw in the towel on trying to solve this. 

Here are steps to repro:

1) open Styles in calc with F11 or Menu > Styles > Manage Styles
2) expand Default
3) expand Status
4) right click on any style
5) select Modify from the popup
6) select Background tab
7) click on None button
8) click on Color button
Color tab page doesn't appear
9) select any different tab (Organizer, Numbers, Font, etc.)
10) select Background tab
Color tab page is shown

The new background tab page works correctly in Writer Styles dialog and worked in Calc before this commit:

commit b2e7956c6ce350eeaa1e4ea79909afd8480ee242
Author: Caolán McNamara <caolanm@redhat.com>, Thu Sep 27 16:25:51 2018 +0100 (6 weeks ago)
Committer: Caolán McNamara <caolanm@redhat.com>, Fri Sep 28 15:36:15 2018 +0200 (6 weeks ago)
Follows: libreoffice-6-1-branch-point
Branches: <Expand>

weld ScStyleDlg

Change-Id: I67e6a6cd1f0b018012c3a373c856494c4fc02979
Reviewed-on: https://gerrit.libreoffice.org/61048
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
Comment 1 Roman Kuznetsov 2018-11-17 14:52:58 UTC
Jim, please add info from dialog Help->About

I don't confirm in

Версия: 6.2.0.0.alpha1+
ID сборки: 7cf6cee97bc05512fae482733ee45f039e9d2160
Потоков ЦП: 4; ОС:Linux 4.18; Отрисовка ИП: по умолчанию; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-11-04_22:10:34
Локаль: ru-RU (ru_RU.UTF-8); Calc: threaded

Caolan, please look at this problem
Comment 2 Jim Raykowski 2018-11-17 21:02:30 UTC
Roman, Thanks for trying to repro this. For me, it happens in both:

Version: 6.2.0.0.alpha1+
Build ID: 46c1a75b144a4c5fd1f4ab0113b87fe030bebd27
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

and

Version 6.2.0.0.alpha1+
Build ID: 397dd8a5f7694540f31f32759c2c915d63506ccd
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86@42; Branch:master, Time: 2018-11-07_23:58:04
Locale: en-US (en_US); Calc: threaded
Comment 3 Caolán McNamara 2018-11-17 21:38:29 UTC
Seems to be a missing dialog parent issue, or at least, fixing that seems to fix this too.
Comment 4 Commit Notification 2018-11-18 14:16:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/76e79bfd3d87f61450badfb1d3bcd22002a278bb%5E%21

Resolves: tdf#121409 missing dialog parent

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2018-11-18 15:39:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/c81e6d249f58dd03b4875380a11143e15ddb1e9a%5E%21

Resolves: tdf#121409 missing dialog parent

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.