Resolves: tdf#121409 missing dialog parent

Change-Id: Ia290d3cc40806b2a88e33e6dabcf36543992f882